--- a/OxyAR/Base.lproj/Main.storyboard
+++ b/OxyAR/Base.lproj/Main.storyboard
@@ -316,7 +316,7 @@
                                 </connections>
                             </arscnView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="target_aim" translatesAutoresizingMaskIntoConstraints="NO" id="kyS-cn-Sa3">
-                                <rect key="frame" x="110" y="-157.5" width="155" height="982.00000000000023"/>
+                                <rect key="frame" x="110" y="325.5" width="155" height="16"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart_pixel2" translatesAutoresizingMaskIntoConstraints="NO" id="mvq-1J-MQB">
                                 <rect key="frame" x="285" y="25" width="75" height="75"/>
