--- a/OxyAR/Base.lproj/Main.storyboard
+++ b/OxyAR/Base.lproj/Main.storyboard
@@ -208,26 +208,26 @@
                                 <color key="backgroundColor" red="0.43494960669999999" green="0.80600363019999999" blue="0.95659250019999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <viewLayoutGuide key="safeArea" id="XDK-js-c43"/>
-                                <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" red="0.43494960669999999" green="0.80600363019999999" blue="0.95659250019999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="highScoreCell" rowHeight="80" id="4Wj-7T-edh" customClass="HighScoreCell" customModule="OxyAR" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="310.5" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="highScoreCell" rowHeight="100" id="4Wj-7T-edh" customClass="HighScoreCell" customModule="OxyAR" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="310.5" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Wj-7T-edh" id="oyB-Zk-QZo">
-                                            <rect key="frame" x="0.0" y="0.0" width="310.5" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="310.5" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fca-5e-PHL">
-                                                    <rect key="frame" x="15" y="23" width="112" height="28"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="25"/>
+                                                    <rect key="frame" x="15" y="36.5" width="200" height="27"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="23"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High score" textAlignment="right" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1v7-iI-MaV">
-                                                    <rect key="frame" x="162.5" y="23" width="133" height="28"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1v7-iI-MaV">
+                                                    <rect key="frame" x="222" y="23" width="76" height="54"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="133" id="bOU-v5-Mo7"/>
+                                                        <constraint firstAttribute="width" constant="76" id="SNV-ub-Wto"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="25"/>
                                                     <nil key="textColor"/>
@@ -235,15 +235,12 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="fca-5e-PHL" firstAttribute="baseline" secondItem="1v7-iI-MaV" secondAttribute="baseline" id="19c-49-vqa"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="1v7-iI-MaV" secondAttribute="trailing" id="6bK-UQ-Qkr"/>
-                                                <constraint firstItem="fca-5e-PHL" firstAttribute="leading" secondItem="oyB-Zk-QZo" secondAttribute="leadingMargin" id="7b7-hp-CjT"/>
-                                                <constraint firstItem="1v7-iI-MaV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fca-5e-PHL" secondAttribute="trailing" constant="8" symbolic="YES" id="BbU-y6-pIZ"/>
-                                                <constraint firstItem="fca-5e-PHL" firstAttribute="top" secondItem="oyB-Zk-QZo" secondAttribute="topMargin" constant="12" id="DIN-MG-58l"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="fca-5e-PHL" secondAttribute="bottom" constant="18" id="GXZ-hE-nhw"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fca-5e-PHL" secondAttribute="trailing" constant="20" symbolic="YES" id="RG6-Ew-LLE"/>
-                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="fca-5e-PHL" secondAttribute="trailing" id="Yvl-Eh-st9"/>
-                                                <constraint firstItem="fca-5e-PHL" firstAttribute="top" secondItem="1v7-iI-MaV" secondAttribute="top" id="faN-KA-0ZU"/>
+                                                <constraint firstItem="1v7-iI-MaV" firstAttribute="centerY" secondItem="fca-5e-PHL" secondAttribute="centerY" id="FAI-46-gdo"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1v7-iI-MaV" secondAttribute="trailing" constant="-2.5" id="KQp-TL-Gy4"/>
+                                                <constraint firstItem="fca-5e-PHL" firstAttribute="leading" secondItem="oyB-Zk-QZo" secondAttribute="leadingMargin" id="S5e-u1-z6b"/>
+                                                <constraint firstItem="1v7-iI-MaV" firstAttribute="top" secondItem="oyB-Zk-QZo" secondAttribute="topMargin" constant="12" id="iLM-qY-CS5"/>
+                                                <constraint firstItem="fca-5e-PHL" firstAttribute="centerY" secondItem="oyB-Zk-QZo" secondAttribute="centerY" id="mkJ-is-E3g"/>
+                                                <constraint firstItem="1v7-iI-MaV" firstAttribute="leading" secondItem="fca-5e-PHL" secondAttribute="trailing" constant="7" id="xqv-aj-4Cp"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.43494960669999999" green="0.80600363019999999" blue="0.95659250019999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -298,7 +295,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTu-Cd-veA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2495" y="725"/>
+            <point key="canvasLocation" x="-2495.1999999999998" y="724.58770614692662"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -532,6 +529,6 @@
         <image name="target_aim" width="980" height="982"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Nec-PZ-jEW"/>
+        <segue reference="oVb-aL-utI"/>
     </inferredMetricsTieBreakers>
 </document>
